fix: [PIE-5221]: fixed overlapping artifact  and manifest cards (#11190)
* feat: [PIE-5221]: fixed overlapping artifact card

* feat: [PIE-5221]: snapshot update

* feat: [PIE-5221]: fixed overflow in manifest

--- a/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactRepository/ArtifactConnector.module.scss
+++ b/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactRepository/ArtifactConnector.module.scss
@@ -152,6 +152,18 @@
 }
 .thumbnailSelect {
   cursor: pointer;
+  min-width: 680px;
+
+  .wrapping {
+    display: flex;
+    flex-wrap: wrap;
+
+    label {
+      margin-left: 0px !important;
+      margin-right: var(--layout-spacing);
+      margin-bottom: var(--layout-spacing);
+    }
+  }
 }
 .panel {
   border: 1px solid var(--form-field-border);
